--- a/locale/en/SolarWalls.cfg
+++ b/locale/en/SolarWalls.cfg
@@ -16,7 +16,9 @@ solar-wall=Wall with solar panels
 [mod-setting-name]
 solar-wall-production=Solar Wall energy production
 solar-wall-recipe-ratio=Solar Wall recipe ratio
+solar-wall-stack-size=Wall stack size
 
 [mod-setting-description]
-solar-wall-production=Value in kW produced by the Solar Wall
+solar-wall-production=Value in kW produced by the Solar Wall, default is 5, min 1, max 150
 solar-wall-recipe-ratio=Ratio for the recipe, e.g.: N = 9 -> 1 Solar Panel + 9 Stone wall = 9 Solar Walls
+solar-wall-stack-size=Wall stack size, default is 100, can be in the interval [1, 1000]
