--- a/locale/en/SolarWalls.cfg
+++ b/locale/en/SolarWalls.cfg
@@ -17,8 +17,10 @@ solar-wall=Wall with solar panels
 solar-wall-production=Solar Wall energy production
 solar-wall-recipe-ratio=Solar Wall recipe ratio
 solar-wall-stack-size=Wall stack size
+solar-wall-max-health=Health of Solar Wall
 
 [mod-setting-description]
 solar-wall-production=Value in kW produced by the Solar Wall, default is 5, min 1, max 150
 solar-wall-recipe-ratio=Ratio for the recipe, e.g.: N = 9 -> 1 Solar Panel + 9 Stone wall = 9 Solar Walls
 solar-wall-stack-size=Wall stack size, default is 100, can be in the interval [1, 1000]
+solar-wall-max-health=Health of the Solar Wall, default is 350, can be in the interval [1, 10000]
